Fixed various FindBugs issues.